tests/build/cases/widget_new/incorrect_arg_type2.stderr
error[E0277]: the trait bound `bool: IntoVar<u32>` is not satisfied
  --> cases/widget_new/incorrect_arg_type2.rs:11:13
   |
11 |       let _ = Wgt! {
   |  _____________^
12 | |         simple_type = true
   | |         ----------- required by a bound introduced by this call
13 | |     };
   | |_____^ the trait `IntoVar<u32>` is not implemented for `bool`
   |
   = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `simple_type::__new__`
  --> cases/widget_new/incorrect_arg_type2.rs:5:53
   |
4  | #[property(CONTEXT)]
   | -------------------- required by a bound in this
5  | pub fn simple_type(child: impl UiNode, simple: impl IntoVar<u32>) -> impl UiNode {
   |                                                     ^^^^^^^^^^^^ required by this bound in `simple_type::__new__`
